# nanograd

./: Cargo.toml  README.md
examples/: addition.rs  backprop.rs  gradient_descent.rs  mnist.rs  spiral.rs
examples/datasets/: mod.rs
examples/datasets/mnist/: mod.rs
examples/datasets/shapes/: mod.rs  xor.json
examples/sample/: mod.rs
src/: helpers.rs  layer.rs  lib.rs  main.rs  mlp.rs  neuron.rs  ops.rs  random.rs  tensor.rs  value.rs
src/backward/: binary.rs  mod.rs  orchestrator.rs  reduce.rs  unary.rs
src/extra/datasets/mnist/: mod.rs
src/forward/: binary.rs  mod.rs  orchestrator.rs  reduce.rs  unary.rs  utils.rs
src/nn/: activation.rs  linear.rs  loss.rs  mod.rs  transformation.rs
src/saved/: circle.json  gaussian.json  spiral.json
src/traits/: mod.rs
src/types/: data.rs  device.rs  lazy.rs  mod.rs  ops.rs
