[package]
name = "nanograd"
version = "0.1.0"
edition = "2021"
description = "A nano neural network library. Scalar valued types with a PyTorch like API."
repository = "https://github.com/jettblu/nanograd"
authors = ["Jett Hays <jetthays.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
