[package]
name = "nanograd"
version = "0.1.1"
edition = "2021"
description = "A nano neural network library. Scalar valued types with a PyTorch like API."
repository = "https://github.com/jettblu/nanograd"
authors = ["Jett Hays <jetthays.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2.3", features = ["js"]}
