[package]
name = "nanograd"
version = "0.1.2"
edition = "2021"
description = "A nano neural network library. Scalar valued types with a PyTorch like API."
repository = "https://github.com/jettblu/nanograd"
authors = ["Jett Hays <jetthays.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2.3", features = ["js"]}
num = "0.4.1"

[dev-dependencies]
flate2 = "1.0.23"
byteorder = "1.3.4"
rand = "0.8.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

